# restate-youtube

./: .env.dist  Dockerfile  README.md  README.md.old  devenv.nix  pyproject.toml
.github/workflows/: ci-nix.yaml  ci.yaml
src/: main.py
src/restate_youtube/: __init__.py  executor.py  model.py  model_channels.py  model_playlist_item.py  model_playlists.py  model_videos.py  restate.py
