[project]
name = "restate-youtube"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mark Sagi-Kazar", email = "mark.sagikazar@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.187.0",
    "pydantic>=2.12.5",
    "restate-sdk[serde]>=0.12.0",
]

[project.optional-dependencies]
app = [
    "granian[pname,reload]>=2.5.7",
    "pydantic-settings>=2.12.0",
    "structlog>=25.5.0",
]

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
